<?xml version="1.0"?>
<package format="3">
  <name>dancing_robot</name>
  <version>0.0.1</version>
  <description>Simple dancing robot for Gazebo simulation</description>
  <maintainer email="adarshb2k61@gmail.com">Adarsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>rclpy</exec_depend>
</package>
