<?xml version="1.0"?>
<package format="3">
  <name>robot_battery_ex</name>
  <version>0.0.0</version>
  <description>ROS2 package to provide battery status service example</description>
  <maintainer email="adarshb2k61@gmail.com">Adarsh</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution/runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
