<?xml version="1.0"?>
<package format="3">
  <name>battery_status_service</name>
  <version>0.0.0</version>
  <description>Defines BatteryStatus service</description>
  <maintainer email="adarshb2k61@gmail.com">Adarsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
