<?xml version="1.0"?>
<package format="3">
 <name>simple_robot_gazebo</name>
  <version>0.0.0</version>
  <description>Simple robot for Gazebo simulation (head, arm, leg)</description>
  <maintainer email="adarshb2k61@.com">Adarsh</maintainer>
  <license>Apache-2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>gazebo_ros</depend>
   <depend>robot_state_publisher</depend>
   <depend>joint_state_publisher</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
    <build_type>ament_cmake</build_type>
   </export>
</package>